src/test/deca/syntax/valid/AvecObjet/ExtendsTest.deca
//Description
//  test de extends
//Résultat
//  ok

class A{

}

class B extends A {
    
}